# PINN-Solve

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT_SUMMARY.md  Makefile  README.md  START_HERE.md  pinn_solver-example.html  planning.md  start-dev.sh  test-api.sh  test_features.py
backend/: .env.example  install-deps.sh  main.py  requirements-base.txt  requirements.txt  start-worker.sh
backend/api/: __init__.py  database.py  datasets.py  problems.py  results.py  system.py  training.py
backend/data/: models.py
backend/postprocessing/: utils.py
backend/preprocessing/: utils.py
backend/services/: __init__.py  datasets.py  db_workspace.py  runtime_env.py  secret_manager.py  system_status.py  training_tasks.py
backend/tasks/: __init__.py  celery_app.py  torch_backend.py
docs/: Makefile-docs.md  README.md  architecture.md  database-workspace.md  faq.md  quickstart.md  training-guide.md
examples/: heat_equation_1d.json
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: tasks.js
frontend/src/components/: LossChart.vue  SolutionPlot.vue
frontend/src/locales/: en.js  index.js  zh.js
frontend/src/router/: index.js
frontend/src/store/: problem.js
frontend/src/views/: ConfigView.vue  DatabaseView.vue  HistoryView.vue  MonitorView.vue  ResultsView.vue
pinn-core/: Cargo.toml
pinn-core/src/: lib.rs
pinn-core/src/autodiff/: mod.rs
pinn-core/src/bindings/: mod.rs
pinn-core/src/gpu/: mod.rs
pinn-core/src/nn/: mod.rs
pinn-core/src/numerics/: mod.rs
pinn-core/src/solver/: mod.rs
