[package]
name = "pinn-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pinn_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15"
nalgebra = "0.32"
rayon = "1.7"
rand = "0.8"
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
